# mailshot

./: pyproject.toml
config/: celery.py  settings.py
services/: __init__.py
services/general/: __init__.py  views.py
services/general/db/: getters.py
services/general/messages/: messages.py  senders.py
services/users/: message_mixins.py  views.py
services/users/confirmation/: messages.py
services/users/confirmation/protectors/: base.py  validators.py
services/users/confirmation/views/: confirmation_mixins.py  message_mixins.py
services/users/db/: getters.py
users/: forms.py  models.py  tasks.py  views.py
